# i-dont-know

./: .gitignore  README.md  README2.md  README3.md  pyproject.toml  requirements.md
assets/: orders_history.txt  test-data  test-data.txt
i_dont_care/: food_tree.py  history.py  intro.py  json_food.py  main.py  scraper.py
i_dont_care.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: intro.py  main.py  scripts.py
tests/: test_app.py  test_i_dont_care.py
